@@ -667,7 +667,7 @@ which makemkvcon >/dev/null 2>&1
 if [ $? -eq 1 ] ; then
    clear
    echo The command makemkvcon was not found on your system.
-   echo Should makemkv 1.6.4 to be installed ?
+   echo Should makemkv 1.6.5 to be installed ?
    echo Even if there is no bluray installed you have to answer
    echo yes if you plan to transcode a dvd to the mkv format.
    echo
@@ -682,17 +682,17 @@ if [ $? -eq 1 ] ; then
          echo
          cd /home/$1/.xbmc/userdata/addon_data/script.video.swiss.army.knife/tmp
 
-         # Download release 1.6.4 from project url for 32 bit 
+         # Download release 1.6.5 from project url for 32 bit 
 
-         wget http://swiss-army-knife.googlecode.com/files/makemkv-swiss-army-knife-32-02-13-2011.tar.gz 
-         tar xvzf makemkv-swiss-army-knife-32-02-13-2011.tar.gz 
+         wget http://swiss-army-knife.googlecode.com/files/makemkv-swiss-army-knife-32-02-20-2011.tar.gz 
+         tar xvzf makemkv-swiss-army-knife-32-02-20-2011.tar.gz 
  
          # Install oss part for makemkv 
         
-         dpkg -i makemkv-v1.6.4-oss_20110213-1_i386.deb
+         dpkg -i makemkv-v1.6.5-oss_20110219-1_i386.deb
          if [ $? -eq 1 ]; then
             clear
-            echo the installation of makemkv-v1.6.4-oss_20110213-1_i386.deb
+            echo the installation of makemkv-v1.6.5-oss_20110219-1_i386.deb
             echo was not successfull.
             echo please do confirm that the installation was not successfull.
             echo
@@ -703,10 +703,10 @@ if [ $? -eq 1 ] ; then
 
          # Install binary part for makemkv 
 
-         dpkg -i makemkv-v1.6.4-bin_20110213-1_i386.deb
+         dpkg -i makemkv-v1.6.5-bin_20110219-1_i386.deb
          if [ $? -eq 1 ]; then
             clear
-            echo the installation of makemkv-v1.6.4-bin_20110213-1_i386.deb
+            echo the installation of makemkv-v1.6.5-bin_20110219-1_i386.deb
             echo was not successfull.
             echo please do confirm that the installation was not successfull.
             echo
@@ -717,7 +717,7 @@ if [ $? -eq 1 ] ; then
 
          # delete downloaded archive
 
-         rm makemkv-swiss-army-knife-32-02-13-2011.tar.gz 
+         rm makemkv-swiss-army-knife-32-02-20-2011.tar.gz 
 
       else
          clear
@@ -781,12 +781,12 @@ else
    echo The command makemkvcon was found on your system.
    echo
    echo The release found on your system is : [$MINSTALLED]
-   echo The script can download and install : [v1.6.4]
+   echo The script can download and install : [v1.6.5]
    echo
-   echo Should makemkv [v1.6.4] be installed over
+   echo Should makemkv [v1.6.5] be installed over
    echo the existing release on your system ?
    echo
-   echo Warning : This may make makemkv unusable ...
+   echo Warning : This may make makemkv unuseable ...
    echo It is may more save to remove the old release
    echo by the command dpkg -r or do not touch the
    echo the current installed makekmkv release [$MINSTALLED] 
@@ -802,15 +802,15 @@ else
          echo
          cd /home/$1/.xbmc/userdata/addon_data/script.video.swiss.army.knife/tmp
 
-         wget http://swiss-army-knife.googlecode.com/files/makemkv-swiss-army-knife-32-02-13-2011.tar.gz 
-         tar xvzf makemkv-swiss-army-knife-32-02-13-2011.tar.gz 
+         wget http://swiss-army-knife.googlecode.com/files/makemkv-swiss-army-knife-32-02-20-2011.tar.gz 
+         tar xvzf makemkv-swiss-army-knife-32-02-20-2011.tar.gz 
 
          # Install oss part for makemkv           
 
-         dpkg -i makemkv-v1.6.4-oss_20110213-1_i386.deb
+         dpkg -i makemkv-v1.6.5-oss_20110219-1_i386.deb
          if [ $? -eq 1 ]; then
             clear
-            echo the installation of makemkv-v1.6.4-oss_20110213-1_i386.deb
+            echo the installation of makemkv-v1.6.5-oss_20110219-1_i386.deb
             echo was not successfull.
             echo please do confirm that the installation was not successfull.
             echo
@@ -821,10 +821,10 @@ else
 
          # Install bin part for makemkv   
 
-         dpkg -i makemkv-v1.6.4-bin_20110213-1_i386.deb
+         dpkg -i makemkv-v1.6.5-bin_20110219-1_i386.deb
          if [ $? -eq 1 ]; then
             clear
-            echo the installation of makemkv-v1.6.4-bin_20110213-1_i386.deb
+            echo the installation of makemkv-v1.6.5-bin_20110219-1_i386.deb
             echo was not successfull.
             echo please do confirm that the installation was not successfull.
             echo
@@ -833,7 +833,7 @@ else
             exit $E_DPKG
          fi
 
-         rm makemkv-swiss-army-knife-32-02-13-2011.tar.gz 
+         rm makemkv-swiss-army-knife-32-02-20-2011.tar.gz 
 
       else
          clear
@@ -880,7 +880,7 @@ else
       clear
       echo
       echo -----------------------------------------------------------
-      echo current makemkv is not updated to release 1.6.4 and remains 
+      echo current makemkv is not updated to release 1.6.5 and remains 
       echo as it is.
       echo
       echo -n press any key to continue ..
